trunk/Archive2/c7/60e0f48990e132/output
main.cpp:10:11: warning: multi-character character constant [-Wmultichar]
     if (v<'20'){
           ^
main.cpp: In function 'int main()':
main.cpp:18:1: error: expected ';' before '}' token
 }
 ^
